[package]
name = "todo_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.167"
serde_json = "1.0.100"
tokio = "1.37.0"
tokio-postgres = "0.7.10"
