[package]
name = "todo_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
postgres = "0.19.7"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.167"
serde_json = "1.0.100"
