[package]
name = "todo_database"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
futures = "0.3.26"
mongodb = "2.4.0"

# SERILIZATION, DESERIALZATION
serde = "1.0.152"
serde_json = "1.0.94"

# DEPENDENCIES SPECIFIC TO SWAGGER
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }